--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "Baseline for Webpack2, Typescript2, Angular2",
   "main": "index.js",
   "scripts": {
+    "clean": "rm -r dist/*",
     "prestart": "npm i && npm run lint",
-    "build": "export NODE_ENV=production && webpack",
+    "build": "npm run clean; webpack --env.mode=production",
     "start": "npm run server",
-    "server": "export NODE_ENV=development & webpack-dev-server",
-    "lint": "find ./app -name '*.ts' | xargs tslint",
-    "ci": "export NODE_ENV=production && npm run lint && webpack --progress --colors --config --bail && npm run test && npm run e2e",
+    "server": "webpack-dev-server --env.mode=local",
+    "lint": "tslint '**/*.ts' -e '**/*.d.ts' -e 'node_modules/**/*'",
+    "ci": "npm i && npm run lint && webpack --env.mode=production --progress --colors --config --bail && npm run test && npm run e2e",
     "size": "webpack --json | webpack-bundle-size-analyzer",
     "test": "karma start",
+    "monitor": "karma start --auto-watch",
     "protractor": "protractor ./config/protractor.conf.js",
     "webdriver:start": "webdriver-manager start",
     "webdriver:update": "webdriver-manager update"
